# tt-train

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  demo.py  demo_estimate.py  demo_job.py  demo_session.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/product/: overview.md
docs/tech/: architecture-review.md  architecture.md  cloud-console-integration.md  scheduler-cluster-interface.md  service-design.md  training-service-interface.md  worker-server-interface.md
docs/tech/spec/: platform-integration.md  training-service-openapi.yaml
docs/tech/spec/paths/: datasets.yaml  hardware.yaml  jobs.yaml  models.yaml  sessions.yaml
server/: __init__.py  auth.py  config.py  main.py  store.py
server/cluster/: __init__.py  base.py  local.py  slurm.py
server/db/: crud.py  engine.py  models.py
server/routers/: datasets.py  hardware.py  inference.py  internal.py  jobs.py  models.py  rewards.py  sessions.py
server/scheduler/: service.py
tests/: test_sdk.py
tt_train/: __init__.py  client.py  errors.py  http.py  types.py
tt_train/resources/: datasets.py  hardware.py  inference.py  jobs.py  models.py  rewards.py  sessions.py
workers/: common.py  events.py  job_runner.py  session_worker.py
