[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tt-train"
version = "0.1.0"
description = "Python SDK for the TT-Train API — fine-tuning and training on Tenstorrent hardware"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tenstorrent", email = "ml-frameworks@tenstorrent.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "sseclient-py>=1.8,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://tt-train.dev"
Documentation = "https://docs.tt-train.dev"
Repository = "https://github.com/tenstorrent/tt-train-python"
