[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tt-train"
version = "0.1.0"
description = "Python SDK for the TT-Train API — fine-tuning and training on Tenstorrent hardware"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tenstorrent", email = "ml-frameworks@tenstorrent.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "sseclient-py>=1.8,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]
server = [
    "fastapi>=0.111,<1",
    "uvicorn[standard]>=0.30,<1",
    "sse-starlette>=1.8,<3",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29,<1",
    "aiosqlite>=0.20,<1",
    "pydantic-settings>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.urls]
Homepage = "https://tt-train.dev"
Documentation = "https://docs.tt-train.dev"
Repository = "https://github.com/tenstorrent/tt-train-python"
